Fixed spacing

--- a/landing page/habihero/src/App.css
+++ b/landing page/habihero/src/App.css
@@ -102,7 +102,7 @@ div.scroll-content {
   margin-right: 0.5%;
 }
 
-.scroll-content button {
+.scroll-content a {
   margin-top: -0.75%;
   font-weight: bold;
   font-size: 1.5vh;
